--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
     "build": "pnpm run build:front && pnpm run build:back",
     "check": "biome check --write",
     "preview": "vite preview",
-    "push": "clasp push",
-    "filetree": "pnpx @telosh/filetree --exclude public,src/assets --use-gitignore"
+    "push": "clasp push"
   },
   "dependencies": {
     "@types/google-apps-script": "^1.0.99",
@@ -21,7 +20,6 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.1",
     "@google/clasp": "3.0.6-alpha",
-    "@telosh/filetree": "^1.0.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.6.0",
