--- a/package.json
+++ b/package.json
@@ -13,19 +13,38 @@
     "push": "clasp push -f"
   },
   "dependencies": {
-    "@types/google-apps-script": "^1.0.99",
+    "@ciderjs/gasnuki": "^0.2.1",
+    "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.11",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.60.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.1.1",
     "@google/clasp": "3.0.6-alpha",
+    "@types/google-apps-script": "^1.0.99",
+    "@types/node": "^24.1.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@typescript/native-preview": "7.0.0-dev.20250723.1",
     "@vitejs/plugin-react": "^4.6.0",
+    "cpx": "^1.5.0",
     "rolldown": "1.0.0-beta.26",
+    "rolldown-plugin-remove-export": "^0.1.2",
+    "tw-animate-css": "^1.3.5",
     "typescript": "~5.8.3",
     "vite": "^7.0.4",
+    "vite-plugin-google-apps-script": "^0.3.2",
     "vite-plugin-singlefile": "^2.3.0"
   }
 }
