GAS関数を追加し、稟議申請の作成、取得、ステータス更新機能を実装。フロントエンドでのユーザー情報取得とページ遷移管理を強化。依存関係を更新し、ビルドスクリプトを改善。

--- a/biome.json
+++ b/biome.json
@@ -6,7 +6,15 @@
     "useIgnoreFile": false
   },
   "files": {
-    "ignoreUnknown": false
+    "ignoreUnknown": false,
+    "includes": [
+      "src/**/*",
+      "types/**/*",
+      "tests/**/*",
+      "server/**/*",
+      "./*.ts",
+      "./*.json"
+    ]
   },
   "formatter": {
     "enabled": true,
