--- a/package.json
+++ b/package.json
@@ -6,21 +6,23 @@
   "scripts": {
     "dev": "vite",
     "build:front": "tsc -b && vite build",
-    "build:back": "rolldown -c",
-    "build": "pnpm run build:front && pnpm run build:back",
+    "build:back": "rolldown -c && cpx server/appsscript.json dist/",
+    "build": "rimraf dist/ && pnpm run build:front && pnpm run build:back",
     "check": "biome check --write",
     "preview": "vite preview",
     "push": "clasp push -f"
   },
   "dependencies": {
-    "@ciderjs/gasnuki": "^0.2.1",
+    "@ciderjs/gasnuki": "^0.2.4",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -39,6 +41,7 @@
     "@typescript/native-preview": "7.0.0-dev.20250723.1",
     "@vitejs/plugin-react": "^4.6.0",
     "cpx": "^1.5.0",
+    "rimraf": "^6.0.1",
     "rolldown": "1.0.0-beta.26",
     "rolldown-plugin-remove-export": "^0.1.2",
     "tw-animate-css": "^1.3.5",
