--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "push": "clasp push -f"
   },
   "dependencies": {
-    "@ciderjs/gasnuki": "^0.2.4",
-    "@hookform/resolvers": "^5.1.1",
+    "@ciderjs/gasnuki": "^0.2.6",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
@@ -24,29 +24,31 @@
     "clsx": "^2.1.1",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.525.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.60.0",
+    "next-themes": "^0.4.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "zod": "^4.0.5"
+    "zod": "^4.0.15"
   },
   "devDependencies": {
-    "@biomejs/biome": "^2.1.1",
-    "@google/clasp": "3.0.6-alpha",
+    "@biomejs/biome": "^2.1.3",
+    "@google/clasp": "2.5.0",
     "@types/google-apps-script": "^1.0.99",
-    "@types/node": "^24.1.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/node": "^24.2.0",
+    "@types/react": "^19.1.9",
+    "@types/react-dom": "^19.1.7",
     "@typescript/native-preview": "7.0.0-dev.20250723.1",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^5.0.0",
     "cpx": "^1.5.0",
     "rimraf": "^6.0.1",
     "rolldown": "1.0.0-beta.26",
-    "rolldown-plugin-remove-export": "^0.1.2",
-    "tw-animate-css": "^1.3.5",
+    "rolldown-plugin-remove-export": "^0.1.3",
+    "tw-animate-css": "^1.3.6",
     "typescript": "~5.8.3",
-    "vite": "^7.0.4",
+    "vite": "^7.1.0",
     "vite-plugin-google-apps-script": "^0.3.2",
     "vite-plugin-singlefile": "^2.3.0"
   }
