--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -24,8 +24,9 @@
     "noUncheckedSideEffectImports": true,
 
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "~/*": ["./*"]
     }
   },
-  "include": ["src"]
+  "include": ["src", "types/appsscript/client.ts.ts"]
 }
