package.jsonに@radix-ui/react-avatarを追加し、pnpm-lock.yamlを更新。approval-form.tsxでモバイル表示に対応し、approval-list.tsxで申請者と承認者の表示を修正。header.tsxでユーザー情報表示を簡素化し、parameters.tsでユーザーアドレスをモックデータに変更。

--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "build": "rimraf dist/ && pnpm run build:front && pnpm run build:back",
     "check": "biome check --write",
     "preview": "vite preview",
-    "push": "clasp push -f"
+    "push": "clasp push -f",
+    "gas": "gasnuki"
   },
   "dependencies": {
     "@ciderjs/gasnuki": "^0.2.6",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
