package.jsonにテストおよびカバレッジ用のスクリプトを追加し、依存関係を更新。tsconfigファイルにページネーション対応のための設定を追加し、GAS関数での稟議申請取得をページネーション対応に変更。approval-list.tsxでページネーション機能を実装し、申請リストの表示を改善。approval-form.tsxで送信中のローディングスピナーを追加し、header.tsxで申請フォームの成功時のコールバックを実装。

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -22,11 +22,13 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
+    "composite": true,
+    "esModuleInterop": true,
 
     "paths": {
       "@/*": ["./src/*"],
       "~/*": ["./*"]
     }
   },
-  "include": ["src", "types/appsscript/client.ts.ts"]
+  "include": ["src", "tests", "server", "types/appsscript/client.ts.ts"]
 }
