--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "check": "biome check --write",
     "preview": "vite preview",
     "push": "clasp push -f",
-    "gas": "gasnuki"
+    "gas": "gasnuki",
+    "test": "vitest run",
+    "coverage": "vitest run --coverage"
   },
   "dependencies": {
     "@ciderjs/gasnuki": "^0.2.9",
@@ -41,13 +43,19 @@
   "devDependencies": {
     "@biomejs/biome": "^2.1.4",
     "@google/clasp": "2.5.0",
+    "@testing-library/jest-dom": "^6.7.0",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/google-apps-script": "^1.0.99",
     "@types/node": "^24.2.1",
     "@types/react": "^19.1.10",
     "@types/react-dom": "^19.1.7",
     "@typescript/native-preview": "7.0.0-dev.20250723.1",
     "@vitejs/plugin-react": "^5.0.0",
+    "@vitest/coverage-v8": "^3.2.4",
+    "@vitest/ui": "3.2.4",
     "cpx": "^1.5.0",
+    "jsdom": "^26.1.0",
     "rimraf": "^6.0.1",
     "rolldown": "1.0.0-beta.26",
     "rolldown-plugin-remove-export": "^0.1.3",
@@ -55,6 +63,7 @@
     "typescript": "~5.8.3",
     "vite": "^7.1.2",
     "vite-plugin-google-apps-script": "^0.4.0",
-    "vite-plugin-singlefile": "^2.3.0"
+    "vite-plugin-singlefile": "^2.3.0",
+    "vitest": "^3.2.4"
   }
 }
