tsconfig.node.jsonの設定を修正し、approval-list.tsxでボタンのサイズを変更し、表示件数の選択肢を改善。

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -20,11 +20,7 @@
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "composite": true,
-
-    "paths": {
-      "~/*": ["./*"]
-    }
+    "composite": true
   },
   "include": ["vite.config.ts"]
 }
