biome.jsonのincludesを修正し、linterのnoUnknownAtRulesルールをoffに設定。server.tsからPostData型を削除し、WebAppParamsインターフェースの整頓を実施。

--- a/biome.json
+++ b/biome.json
@@ -52,11 +52,11 @@
       }
     },
     {
-      "includes": ["**/*.css"],
+      "includes": ["src/index.css"],
       "linter": {
         "rules": {
           "suspicious": {
-            "noUnknownAtRules": "info"
+            "noUnknownAtRules": "off"
           }
         }
       }
