--- a/.github/workflows/gist-push.yml
+++ b/.github/workflows/gist-push.yml
@@ -30,7 +30,7 @@ jobs:
         run: |
           GIST_ID="b44be26669d7fe80628bb684be4cfae5"
           for FILE in $FILES; do
-            NAME="${FILE//\//%2F}"
+            NAME="${FILE//\//\\}"
             if [[ ! -s "$FILE" ]]; then
               echo "⚠️ $FILE は空なのでスキップします"
               continue
