--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -14,14 +14,17 @@ jobs:
           node-version: 20
       - uses: pnpm/action-setup@v4
         with:
-          version: 10.11.0
+          version: 10.15.0
       - run: pnpm install --frozen-lockfile
       - run: pnpm prepublishOnly
       - run: pnpm build
       - run: |
+          touch .clasprc.json
+          echo "${{ secrets.CLASPRC }}" > .clasprc.json
+      - run: |
           touch .clasp.json
           echo "{"scriptId":"${{ secrets.SCRIPT_ID }}","rootDir":"dist"}" > .clasp.json
-      - run: pnpm push
-      - run: pnpm deploy:update -- description "Deploy by GitHub Actions"
+      - run: pnpm push -- -A ./.clasprc.json
+      - run: pnpm deploy:update -- --description "Deploy by GitHub Actions" -A ./.clasprc.json
         env:
           GAS_DEPLOYMENT_ID: ${{ secrets.GAS_DEPLOYMENT_ID }}
