deploy.yamlで.clasprc.jsonファイルの作成ディレクトリを変更し、jsonアクションの引数を更新。デプロイ時の設定を改善。

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -22,7 +22,7 @@ jobs:
         with:
           name: ".clasprc.json"
           json: ${{ secrets.CLASPRC }}
-          dir: "."
+          dir: "~/"
       - run: |
           touch .clasp.json
           echo "{"scriptId":"${{ secrets.SCRIPT_ID }}","rootDir":"dist"}" > .clasp.json
